--- a/src/app/shared/components/chess-board/chess-board.scss
+++ b/src/app/shared/components/chess-board/chess-board.scss
@@ -1,5 +1,5 @@
 .chessboard {
-  width: 256px;
-  height: 256px;
+  width: 100%;
+  height: 100%;
   border-radius: 4px;
 }
